chore: add the initial constitution